@@ -32,6 +32,7 @@
   <properties>
     <java.version>21</java.version>
     <spring.version>3.5.5</spring.version>
+    <fasterxml.jackson.version>2.19.2</fasterxml.jackson.version>
     <picocli.version>4.7.7</picocli.version>
     <toml4j.version>0.7.2</toml4j.version>
     <jfiglet.version>0.0.9</jfiglet.version>
@@ -84,7 +85,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-yaml</artifactId>
-      <version>2.19.2</version>
+      <version>${fasterxml.jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.moandjiezana.toml</groupId>
@@ -115,7 +116,6 @@
         <configuration>
           <source>21</source>
           <target>21</target>
-          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
     </plugins>
